--- a/notebooks/choropleth.ipynb
+++ b/notebooks/choropleth.ipynb
@@ -16147,9 +16147,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv-note",
    "language": "python",
-   "name": "python3"
+   "name": "venv-note"
   },
   "language_info": {
    "codemirror_mode": {
